--- a/HomeHelper/MainPage.xaml
+++ b/HomeHelper/MainPage.xaml
@@ -485,20 +485,57 @@
 
                     </StackPanel>
                 </GridViewItem>
+                
                 <GridViewItem Padding="10 0 0 0" VerticalContentAlignment="Stretch" HorizontalAlignment="Center" >
-                    <StackPanel Orientation="Vertical" >
+                                 
+                       <StackPanel Orientation="Vertical" >
                         <StackPanel Orientation="Horizontal">
                             <TextBlock Text="Consum" Padding="30" FontSize="20"/>
                             <Button x:Name="btnAddConsum" Style="{StaticResource AddAppBarButtonStyle}" Command="{Binding AddConsumCommand}" 
                                     Visibility="{Binding ListaUtilitati.Count, Converter={StaticResource ItemCountToEmptyVisibilityConverter}}"
                                     />
                         </StackPanel>
+                        <Viewbox Stretch="UniformToFill"  HorizontalAlignment="Stretch" VerticalAlignment="Stretch">
+                            <StackPanel Orientation="Horizontal">
+                           
+                            <StackPanel Orientation="Vertical">
+                                <StackPanel Orientation="Horizontal"  Background="Black"  >
+                                <TextBlock Text="Data" Width="200"></TextBlock>
+                                <TextBlock Text="Index" Width="100"></TextBlock>
+                                <TextBlock Text="Consum"></TextBlock>
+                            </StackPanel>
+                        <ListView
+                            ScrollViewer.IsVerticalRailEnabled="True"
+                            ScrollViewer.VerticalScrollBarVisibility="Visible"
+                            ScrollViewer.VerticalScrollMode="Enabled"
+                            Visibility="{Binding ListaUtilitati.Count, Converter={StaticResource ItemCountToEmptyVisibilityConverter}}"
+                            ItemsSource="{Binding ConsumUtilitates, Mode=TwoWay}"   Margin="0,0,0,10"
+                            AllowDrop="False"
+                            IsItemClickEnabled="True"
+                            Background="Black"
+                            
+                            >
+                            
+                            <ListView.ItemTemplate >
+                                <DataTemplate>
+                                            <StackPanel Orientation="Horizontal" >
+                                        <TextBlock Text="{Binding DataConsum}" Width="200"></TextBlock>
+                                        <TextBlock Text="{Binding IndexUtilitate}" Width="100"></TextBlock>
+                                        <TextBlock Text="{Binding Consum}"></TextBlock>
+                                    </StackPanel>
+                                </DataTemplate>
+                            </ListView.ItemTemplate>
+                            
+                        </ListView>
+                            </StackPanel>
+                       
                         <TextBlock
                             Visibility="{Binding ListaUtilitati.Count, Converter={StaticResource ItemCountToEmptyShow}}"
                             Text="Nu sunt inregistrari adaugate"
                             Style="{StaticResource GroupHeaderTextStyle}" Padding="20,0,0,0"
                             ></TextBlock>
-                        <Chart:Chart x:Name="LineChart"
+                        
+                        <Chart:Chart x:Name="LineChart" Margin="10,0,0,0"
                                  HorizontalAlignment="Center" VerticalAlignment="Top" Height="500" Width="800"
                                   Visibility="{Binding ConsumUtilitates.Count, Converter={StaticResource ItemCountToEmptyVisibilityConverter}}" Background="#FF743E44"
                                      >
@@ -507,7 +544,12 @@
                                               
                                               IsSelectionEnabled="True" SelectedItem="{Binding ConsumSelect, Mode=TwoWay}" Title="{Binding LegendaUtilitateGrafic, Mode=TwoWay}"/>
                         </Chart:Chart>
+                            
+                        </StackPanel>
+                        </Viewbox>
                     </StackPanel>
+                  
+
                 </GridViewItem>
                 <GridViewItem Padding="10 0 0 0" VerticalContentAlignment="Stretch" HorizontalAlignment="Center" >
                     <StackPanel Orientation="Vertical" >
