--- a/HomeHelper/Controls/EditUtilitateUserControl.xaml
+++ b/HomeHelper/Controls/EditUtilitateUserControl.xaml
@@ -6,7 +6,8 @@
     xmlns:local="using:HomeHelper.Controls"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-    mc:Ignorable="d"
+        xmlns:input="using:Syncfusion.UI.Xaml.Controls.Input"
+        mc:Ignorable="d"
     d:DesignHeight="300"
     d:DesignWidth="400"
     Height="400"
@@ -23,6 +24,7 @@
             <RowDefinition Height="50"></RowDefinition>
             <RowDefinition Height="Auto"></RowDefinition>
             <RowDefinition Height="Auto"></RowDefinition>
+            <RowDefinition Height="Auto"></RowDefinition>
             
         </Grid.RowDefinitions>
         <TextBlock Text="Utilitate" Margin="10"></TextBlock>
@@ -31,7 +33,9 @@
         <TextBox Name="txtUnitate" Margin="10" Grid.Row="1" Grid.Column="1" Text="{Binding  ObiectInBinding.UnitateMasura, Mode=TwoWay}"></TextBox>
         <TextBlock Text="Valoare Initiala" Grid.Row="2" Grid.Column="0" Margin="10"></TextBlock>
         <TextBox Name="txtValoareInitiala" Grid.Row="2" Grid.Column="1" Margin="10"  Text="{Binding ObiectInBinding.IndexInitial, Mode=TwoWay}"></TextBox>
-        <ListView Grid.Row="3" Grid.Column="1" Visibility="{Binding Erori.Count, Converter={StaticResource ItemCountToEmptyVisibilityConverter}}"
+        <TextBlock Text="Data index initial" Grid.Row="3" Grid.Column="0"></TextBlock>
+        <input:DatePicker Grid.Row="3" Grid.Column="1" Value="{Binding ObiectInBinding.DataIndexInitial}"></input:DatePicker>
+        <ListView Grid.Row="4" Grid.Column="1" Visibility="{Binding Erori.Count, Converter={StaticResource ItemCountToEmptyVisibilityConverter}}"
                   ItemsSource="{Binding Erori,Mode=TwoWay}" IsEnabled="False"
                   
                   >
@@ -46,7 +50,7 @@
             </ListView.ItemTemplate>
         </ListView>
 
-        <StackPanel Grid.Row="4" Grid.Column="1" Orientation="Horizontal">
+        <StackPanel Grid.Row="5" Grid.Column="1" Orientation="Horizontal">
         <Button  Style="{StaticResource SaveAppBarButtonStyle}" Command="{Binding SaveCommand}"></Button>
         <Button  Style="{StaticResource DeleteAppBarButtonStyle}" Visibility="{Binding ShowDelete, Mode=TwoWay, Converter={StaticResource booleanToVisibilityConverter}}" Command="{Binding DeleteCommand}"></Button>
         <Button  Style="{StaticResource CancelAppBarButtonStyle}" Command="{Binding CancelCommand}"></Button>  
