--- a/HomeHelper/MainPage.xaml
+++ b/HomeHelper/MainPage.xaml
@@ -432,7 +432,7 @@
                         </StackPanel>
                         <TextBlock
                             Visibility="{Binding ListaUtilitati.Count, Converter={StaticResource ItemCountToEmptyShow}}"
-                            Text="Nu sunt inregistrari adaugate"
+                            x:Uid="InregistrariGoale" Text=""
                             Style="{StaticResource GroupHeaderTextStyle}" Padding="20,0,0,0"
                             ></TextBlock>
                         <GridView x:Name="itemListUtilitati"
@@ -456,7 +456,7 @@
                                     <StackPanel Background="#FF2B1926"  Width="300" Height="120">
                                         <TextBlock Text="{Binding DenumireUtilitate}" FontSize="30" Margin="5,0,0,0" TextAlignment="Left"/>
                                         <StackPanel Orientation="Horizontal" Margin="40 0 0 0">
-                                            <TextBlock Text="Consum" ></TextBlock>
+                                            <TextBlock x:Uid="ConsumLstUtilitati" Text="" ></TextBlock>
                                             <Polygon Points="0,24 15,0 -15,0" Stroke="Black" Fill="White" Name="crestere"  RenderTransformOrigin="0.5,0.5" Visibility="{Binding IsCrestere, Converter={StaticResource booleanToVisibilityConverter}}">
                                                 <Polygon.RenderTransform>
                                                     <RotateTransform  Angle="180"></RotateTransform>
