Introdus resursele in user controalele de editoare.

--- a/HomeHelper/Controls/AlertaUtilitateUserControl.xaml
+++ b/HomeHelper/Controls/AlertaUtilitateUserControl.xaml
@@ -29,25 +29,25 @@
             <RowDefinition Height="Auto"></RowDefinition>
             <RowDefinition Height="Auto"></RowDefinition>
         </Grid.RowDefinitions>
-        <TextBlock Text="Utilitate" Margin="10" Grid.Row="0" Grid.Column="0"></TextBlock>
+        <TextBlock x:Uid="lblUtitlitati" Text="" Margin="10" Grid.Row="0" Grid.Column="0"></TextBlock>
         <ComboBox Name="cmbUtilitate" Margin="10"
                   ItemsSource="{Binding ListaUtilitati}"
                   DisplayMemberPath="DenumireUtilitate"
                   SelectedValuePath="IdUtilitati"
                   SelectedValue="{Binding ObiectInBinding.IdUitlitate, Mode=TwoWay}"  Grid.Row="0" Grid.Column="1"></ComboBox>
-        <TextBlock Text="Frecventa Alerta" Grid.Column="0" Margin="10" Grid.Row="1"></TextBlock>
+        <TextBlock x:Uid="lblFrecventaAlerta" Text="" Grid.Column="0" Margin="10" Grid.Row="1"></TextBlock>
         <ComboBox Margin="10" Name="cmbFrecventare"
                   Grid.Row="1" Grid.Column="1" ItemsSource="{Binding Frecvente}" 
                   SelectedValue="{Binding ObiectInBinding.FrecventaAlerta, Mode=TwoWay}"
                   SelectedValuePath="Key"
                   DisplayMemberPath="Value"
                   ></ComboBox>
-        <TextBlock Text="Data Alerta" Margin="10" Grid.Column="0" Grid.Row="2"></TextBlock>
+        <TextBlock x:Uid="lblDataAlerta" Text="" Margin="10" Grid.Column="0" Grid.Row="2"></TextBlock>
         <Input:DatePicker Grid.Column="1" Grid.Row="2" Value="{Binding ObiectInBinding.DataAlerta, Mode=TwoWay}" x:Name="dtpLocal" Margin="10" ></Input:DatePicker>
         <Input:TimePicker Grid.Column="1" Grid.Row="3" Value="{Binding ObiectInBinding.DataAlerta, Mode=TwoWay}" Name="tmLoca" ></Input:TimePicker>
-        <ListView Grid.Row="4" Grid.Column="1" Visibility="{Binding Erori.Count, Converter={StaticResource ItemCountToEmptyVisibilityConverter}}"
+        <ListView Grid.Row="3" Grid.Column="1" Visibility="{Binding Erori.Count, Converter={StaticResource ItemCountToEmptyVisibilityConverter}}"
                   ItemsSource="{Binding Erori,Mode=TwoWay}" 
-                  IsSwipeEnabled="False" IsDoubleTapEnabled="False" IsEnabled="False"
+                  IsSwipeEnabled="False" IsDoubleTapEnabled="False" IsEnabled="False" Margin="0,49,0,0"
                   >
             <ListView.ItemTemplate>
                 <DataTemplate>
