--- a/HomeHelper/Controls/EditUtilitateUserControl.xaml
+++ b/HomeHelper/Controls/EditUtilitateUserControl.xaml
@@ -27,13 +27,13 @@
             <RowDefinition Height="Auto"></RowDefinition>
             
         </Grid.RowDefinitions>
-        <TextBlock Text="Utilitate" Margin="10"></TextBlock>
+        <TextBlock x:Uid="lblUtitlitati" Text="" Margin="10"></TextBlock>
         <TextBox Name="txtUtilitate" Margin="10" Grid.Row="0" Grid.Column="1" Text="{Binding ObiectInBinding.DenumireUtilitate, Mode=TwoWay}"></TextBox>
-        <TextBlock Text="Unitate Masura" Margin="10" Grid.Row="1" Grid.Column="0"></TextBlock>
+        <TextBlock  x:Uid="lblUtitlitati" Text="" Margin="10" Grid.Row="1" Grid.Column="0"></TextBlock>
         <TextBox Name="txtUnitate" Margin="10" Grid.Row="1" Grid.Column="1" Text="{Binding  ObiectInBinding.UnitateMasura, Mode=TwoWay}"></TextBox>
-        <TextBlock Text="Valoare Initiala" Grid.Row="2" Grid.Column="0" Margin="10"></TextBlock>
+        <TextBlock x:Uid="lblValoareInitiala" Text="" Grid.Row="2" Grid.Column="0" Margin="10"></TextBlock>
         <TextBox Name="txtValoareInitiala" Grid.Row="2" Grid.Column="1" Margin="10"  Text="{Binding ObiectInBinding.IndexInitial, Mode=TwoWay}"></TextBox>
-        <TextBlock Text="Data index initial" Grid.Row="3" Grid.Column="0"></TextBlock>
+        <TextBlock x:Uid="lblDataIndexInitial" Text="" Grid.Row="3" Grid.Column="0"></TextBlock>
         <input:DatePicker Grid.Row="3" Grid.Column="1" Value="{Binding ObiectInBinding.DataIndexInitial}"></input:DatePicker>
         <ListView Grid.Row="4" Grid.Column="1" Visibility="{Binding Erori.Count, Converter={StaticResource ItemCountToEmptyVisibilityConverter}}"
                   ItemsSource="{Binding Erori,Mode=TwoWay}" IsEnabled="False"
