--- a/HomeHelper/Controls/EditUtilitateUserControl.xaml
+++ b/HomeHelper/Controls/EditUtilitateUserControl.xaml
@@ -34,7 +34,7 @@
         <TextBlock x:Uid="lblValoareInitiala" Text="" Grid.Row="2" Grid.Column="0" Margin="10"></TextBlock>
         <TextBox Name="txtValoareInitiala" Grid.Row="2" Grid.Column="1" Margin="10"  Text="{Binding ObiectInBinding.IndexInitial, Mode=TwoWay}"></TextBox>
         <TextBlock x:Uid="lblDataIndexInitial" Text="" Grid.Row="3" Grid.Column="0"></TextBlock>
-        <input:DatePicker Grid.Row="3" Grid.Column="1" Value="{Binding ObiectInBinding.DataIndexInitial}"></input:DatePicker>
+        <input:DatePicker Grid.Row="3" Grid.Column="1" Value="{Binding ObiectInBinding.DataIndexInitial, Mode=TwoWay}"></input:DatePicker>
         <ListView Grid.Row="4" Grid.Column="1" Visibility="{Binding Erori.Count, Converter={StaticResource ItemCountToEmptyVisibilityConverter}}"
                   ItemsSource="{Binding Erori,Mode=TwoWay}" IsEnabled="False"
                   
