Nu te lasa sa pui zecimale la adaugare consum solved.

--- a/HomeHelper/Controls/EditConsumUtilitateUserControl.xaml
+++ b/HomeHelper/Controls/EditConsumUtilitateUserControl.xaml
@@ -36,7 +36,7 @@
         <TextBlock Text="Data Consum" Margin="10" Grid.Column="0" Grid.Row="1"></TextBlock>
         <Input:DatePicker Grid.Column="1" Grid.Row="1" Value="{Binding ObiectInBinding.DataConsum, Mode=TwoWay}" Margin="10" />
         <TextBlock x:Uid="lblDataConsum" Text="" Grid.Row="2" Grid.Column="0" Margin="10"></TextBlock>
-        <Input:NumericTextBox Grid.Row="2" Grid.Column="1" Margin="10" Text="{Binding ObiectInBinding.IndexUtilitate, Mode=TwoWay }"></Input:NumericTextBox>
+        <Input:NumericTextBox Grid.Row="2" Grid.Column="1" Margin="10" Value="{Binding ObiectInBinding.IndexUtilitate, Mode=TwoWay}"></Input:NumericTextBox>
         <ListView Grid.Row="3" Grid.Column="1" Visibility="{Binding Erori.Count, Converter={StaticResource ItemCountToEmptyVisibilityConverter}}"
                   ItemsSource="{Binding Erori,Mode=TwoWay}" 
                   IsSwipeEnabled="False" IsDoubleTapEnabled="False" IsEnabled="False"
